--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon -r dotenv/config server.js",
-    "start": "node -r dotenv/config server.js"
+    "start": "node -r dotenv/config server.js",
+    "route": "jest"
+  },
+  "jest":{
+    "setupFiles": ["dotenv/config"]
   },
   "keywords": [],
   "author": "",
@@ -19,5 +23,9 @@
     "mongoose": "^8.0.0",
     "mysql2": "^3.6.3",
     "sequelize": "^6.34.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
